﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Removed: Optional dirname parameter for all iMSCP::Dir::* methods (iMSCP::Dir object = One directory)
	Removed: Support for file/dir exclusion - iMSCP::Dir::rcopy()

TESTS
	Added: Travis CI support for Unit testing
	Added: Unit tests for the iMSCP::Dir library
	Added: Unit tests for the iMSCP::SetRights library

YOUTRACK
	Fixed: #IP-1393: Unable to disable backup feature for existing domains

------------------------------------------------------------------------------------------------------------------------
1.2.9
------------------------------------------------------------------------------------------------------------------------

2015-07-03: Laurent Declercq
	RELEASE i-MSCP 1.2.9

BACKEND
	Added: Dedicated server implementation for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Changed: Customers have now a full read access to their http logs, including those which were rotated
	Changed: Domain's logs are now mounted in customer's logs folder using bind mount instead of being copied
	Fixed: closedir() attempted on invalid dirhandle DIRH at line 312 (iMSCP::Dir)
	Fixed: Due to logs rotation, some httpd logs are never copied into customer's log folders
	Fixed: File /etc/mysql/conf.d/imscp.cnf not loaded when using Percona DB server due to missing /etc/mysql/my.cnf file
	Fixed: POP3 SSL and IMAP SSL services must be disabled when SSL is disabled for the services - Courier server impl.
	Fixed: The .my.cnf file is no longer used and thus, must be removed
	Fixed: Set timezone according TIMEZONE configuration parameter (iMSCP::Bootstrapper::boot())
	Rewritten: iMSCP::Dir library

CONFIGS